--- a/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
+++ b/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
@@ -1,23 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>caffoa</ToolCommandName>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>10</LangVersion>
+        <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
+        <Authors>claasd</Authors>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CommandLineParser" Version="2.8.0" />
-      <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
-      <PackageReference Include="YamlDotNet" Version="11.2.1" />
+        <PackageReference Include="CommandLineParser" Version="2.8.0" />
+        <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
+        <PackageReference Include="YamlDotNet" Version="11.2.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
-      <EmbeddedResource Include="data\ModelTemplate.tpl" />
+        <EmbeddedResource Include="data\FunctionsMethod.tpl" />
+        <EmbeddedResource Include="data\FunctionsSwitchMethod.tpl" />
+        <EmbeddedResource Include="data\FunctionsTemplate.tpl" />
+        <EmbeddedResource Include="data\InterfaceMethod.tpl" />
+        <EmbeddedResource Include="data\InterfaceTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelTemplate.tpl" />
     </ItemGroup>
 
 </Project>
