--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.CI_REPO_ACCESS_TOKEN }}
       - name: Push to Nuget.org
-        run: dotnet nuget push *.nupkg --api-key "${GITHUB_TOKEN}"
+        run: dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key "${GITHUB_TOKEN}"
         env:
           GITHUB_TOKEN: ${{ secrets.NUGET_KEY }}        
