--- a/CdIts.Caffoa.Abstractions/CdIts.Caffoa.Abstractions.csproj
+++ b/CdIts.Caffoa.Abstractions/CdIts.Caffoa.Abstractions.csproj
@@ -1,21 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <LangVersion>10</LangVersion>
         <RootNamespace>Caffoa</RootNamespace>
         <IsPackable>true</IsPackable>
-        <TargetFrameworks>net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
         <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
         <Authors>claasd</Authors>
+        <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.22" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\CdIts.Caffoa.Abstractions\CdIts.Caffoa.Abstractions.csproj" />
-    </ItemGroup>
-
 </Project>
