--- a/CdIts.Caffoa/CdIts.Caffoa.csproj
+++ b/CdIts.Caffoa/CdIts.Caffoa.csproj
@@ -7,6 +7,7 @@
         <IsPackable>true</IsPackable>
         <TargetFrameworks>net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
         <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Authors>claasd</Authors>
     </PropertyGroup>
 
