--- a/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
+++ b/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
@@ -10,24 +10,29 @@
         <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Authors>claasd</Authors>
+        <Description>Tool to autogenerate azure function templates for .NET from openapi declaration. 
+            Instead of generating stubs, the goal is to be able to change the api and re-generate the files without overwriting your code.
+            
+            This is the CLI that can be istalled via dotnet tool install.
+        </Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommandLineParser" Version="2.8.0" />
-        <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
-        <PackageReference Include="YamlDotNet" Version="11.2.1" />
+        <PackageReference Include="CommandLineParser" Version="2.8.0"/>
+        <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3"/>
+        <PackageReference Include="YamlDotNet" Version="11.2.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="data\FunctionsMethod.tpl" />
-        <EmbeddedResource Include="data\FunctionsSwitchMethod.tpl" />
-        <EmbeddedResource Include="data\FunctionsTemplate.tpl" />
-        <EmbeddedResource Include="data\InterfaceMethod.tpl" />
-        <EmbeddedResource Include="data\InterfaceTemplate.tpl" />
-        <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl" />
-        <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl" />
-        <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
-        <EmbeddedResource Include="data\ModelTemplate.tpl" />
+        <EmbeddedResource Include="data\FunctionsMethod.tpl"/>
+        <EmbeddedResource Include="data\FunctionsSwitchMethod.tpl"/>
+        <EmbeddedResource Include="data\FunctionsTemplate.tpl"/>
+        <EmbeddedResource Include="data\InterfaceMethod.tpl"/>
+        <EmbeddedResource Include="data\InterfaceTemplate.tpl"/>
+        <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl"/>
+        <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl"/>
+        <EmbeddedResource Include="data\ModelPropertyTemplate.tpl"/>
+        <EmbeddedResource Include="data\ModelTemplate.tpl"/>
     </ItemGroup>
 
 </Project>
