--- a/CdIts.Caffoa/CdIts.Caffoa.csproj
+++ b/CdIts.Caffoa/CdIts.Caffoa.csproj
@@ -9,6 +9,10 @@
         <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Authors>claasd</Authors>
+        <Description>CAFFOA is a tool to autogenerate azure function templates for .NET from openapi declaration.
+            Instead of generating stubs, the goal is to be able to change the api and re-generate the files without overwriting your code.
+
+            This is the library that contains Default implementations.</Description>
     </PropertyGroup>
 
     <ItemGroup>
