--- a/demo/DemoV3/DemoV3.csproj
+++ b/demo/DemoV3/DemoV3.csproj
@@ -6,6 +6,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
         <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.6.0" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
