--- a/caffoa.yml
+++ b/caffoa.yml
@@ -3,6 +3,7 @@ config:
   duplicates: once # once, overwrite (default)
   routePrefix: api/
   useDateOnly: true
+  splitByTag: true # if set to true, multiple function files ind interfaces will be generated, based on the first tag of each path item
   parsePathParameters: true # if set to true, the parameter parsing is not left to Functions, but is done by caffoa, opening up the possibility to give back better error messages
   parseQueryParameters: true # if set to true, caffoa will parse required and optional parameters that are defined for query
   requestBodyType: # overwrite the JSON type that is passed to the method for some operations
