--- a/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
+++ b/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
@@ -5,7 +5,6 @@
         <Nullable>enable</Nullable>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>caffoa</ToolCommandName>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>10</LangVersion>
         <RepositoryUrl>https://github.com/claasd/caffoa.net.git</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -15,6 +14,7 @@
             
             This is the CLI that can be istalled via dotnet tool install.
         </Description>
+        <TargetFrameworks>net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -31,6 +31,7 @@
         <EmbeddedResource Include="data\InterfaceTemplate.tpl" />
         <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl" />
         <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelLEgacyEnumPropertyTemplate.tpl" />
         <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
         <EmbeddedResource Include="data\ModelTemplate.tpl" />
     </ItemGroup>
