--- a/caffoa.yml
+++ b/caffoa.yml
@@ -6,6 +6,7 @@ config:
   splitByTag: true # if set to true, multiple function files and interfaces will be generated, based on the first tag of each path item
   parsePathParameters: true # if set to true, the parameter parsing is not left to Functions, but is done by caffoa, opening up the possibility to give back better error messages
   parseQueryParameters: true # if set to true, caffoa will parse required and optional parameters that are defined for query
+  genericAdditionalProperties: false # if set to true, a dictionary for additional properties will be generated
   requestBodyType: # overwrite the JSON type that is passed to the method for some operations
     - type: JObject
       import: Newtonsoft.Json.Linq
@@ -17,6 +18,8 @@ config:
   
 services:
   - apiPath: tests\base.openapi.yml
+    config:
+      genericAdditionalProperties: true
     model:
       namespace: DemoV3.Model.Base
       targetFolder: ./demo/DemoV3/Model/Base
