new option `functionNamePrefix` that adds a prefix to all function names (Not interfaces). Useful if you have multiple APIs in one function that have identical operation IDs

--- a/caffoa.yml
+++ b/caffoa.yml
@@ -32,7 +32,8 @@ services:
       targetFolder: ./demo/DemoV3/Model/XY
 
   - apiPath: tests\openapi.yml
-    config: 
+    config:
+#      functionNamePrefix: Func
       imports: 
         - DemoV3.Model.Base
       durableClient:
