--- a/caffoa.yml
+++ b/caffoa.yml
@@ -34,6 +34,7 @@ services:
   - apiPath: tests\openapi.yml
     config:
 #      functionNamePrefix: Func
+      generateResolvedApiFile: true
       disposable: true
       imports: 
         - DemoV3.Model.Base
