--- a/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
+++ b/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
@@ -31,9 +31,11 @@
         <EmbeddedResource Include="data\InterfaceTemplate.tpl" />
         <EmbeddedResource Include="data\ModelEnumPropertyClassTemplate.tpl" />
         <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelExtensionContentTemplate.tpl" />
         <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl" />
         <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
         <EmbeddedResource Include="data\ModelTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelExtensionTemplate.tpl" />
     </ItemGroup>
 
 </Project>
