--- a/demo/DemoV3/DemoV3.csproj
+++ b/demo/DemoV3/DemoV3.csproj
@@ -18,6 +18,7 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\..\CdIts.Caffoa.Extensions\CdIts.Caffoa.Extensions.csproj" />
       <ProjectReference Include="..\..\CdIts.Caffoa\CdIts.Caffoa.csproj" />
     </ItemGroup>
 </Project>
