allow to not generate depcrecated stuff

--- a/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
+++ b/CdIts.Caffoa.Cli/CdIts.Caffoa.Cli.csproj
@@ -30,7 +30,9 @@
         <EmbeddedResource Include="data\InterfaceMethod.tpl" />
         <EmbeddedResource Include="data\InterfaceTemplate.tpl" />
         <EmbeddedResource Include="data\ModelEnumPropertyClassTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelEnumPropertyClassTemplate.deprecated.tpl" />
         <EmbeddedResource Include="data\ModelEnumPropertyTemplate.tpl" />
+        <EmbeddedResource Include="data\ModelExtensionContentTemplate.deprecated.tpl" />
         <EmbeddedResource Include="data\ModelExtensionContentTemplate.tpl" />
         <EmbeddedResource Include="data\ModelInterfaceTemplate.tpl" />
         <EmbeddedResource Include="data\ModelPropertyTemplate.tpl" />
