allow to merge different types

--- a/CdIts.Caffoa.Tests/CdIts.Caffoa.Tests.csproj
+++ b/CdIts.Caffoa.Tests/CdIts.Caffoa.Tests.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CdIts.Caffoa.Extensions\CdIts.Caffoa.Extensions.csproj" />
       <ProjectReference Include="..\CdIts.Caffoa\CdIts.Caffoa.csproj" />
     </ItemGroup>
 
