--- a/CdIts.Caffoa.Extensions/CdIts.Caffoa.Extensions.csproj
+++ b/CdIts.Caffoa.Extensions/CdIts.Caffoa.Extensions.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <LangVersion>10</LangVersion>
@@ -14,11 +13,16 @@
             Instead of generating stubs, the goal is to be able to change the api and re-generate the files without overwriting your code.
 
             This is the library that contains Interfaces and abstract classes.</Description>
+        <TargetFramework>netstandard2.0</TargetFramework>
 
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CdIts.Caffoa.Abstractions\CdIts.Caffoa.csproj" />
     </ItemGroup>
 
 </Project>
