more tests and allow errorHandling

--- a/CdIts.Caffoa.Extensions/CdIts.Caffoa.Extensions.csproj
+++ b/CdIts.Caffoa.Extensions/CdIts.Caffoa.Extensions.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CdIts.Caffoa.Abstractions\CdIts.Caffoa.csproj" />
+      <ProjectReference Include="..\CdIts.Caffoa.Abstractions\CdIts.Caffoa.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
